src/snapshots/ruff__linter__tests__F901_F901.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  def f() -> None:
|     raise NotImplemented()
|> `raise NotImplemented` should be `raise NotImplementedError`
  
  
  def g() -> None:
|     raise NotImplemented
|> `raise NotImplemented` should be `raise NotImplementedError`

