src/snapshots/ruff__linter__tests__FBT003_FBT.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: BooleanPositionalValueInFunctionCall
  location:
    row: 42
    column: 10
  end_location:
    row: 42
    column: 14
  fix: ~
- kind: BooleanPositionalValueInFunctionCall
  location:
    row: 57
    column: 10
  end_location:
    row: 57
    column: 14
  fix: ~
- kind: BooleanPositionalValueInFunctionCall
  location:
    row: 57
    column: 16
  end_location:
    row: 57
    column: 21
  fix: ~

