src/snapshots/ruff__linter__tests__N802_N802.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    InvalidFunctionName: Bad
  location:
    row: 4
    column: 0
  end_location:
    row: 5
    column: 4
  fix: ~
- kind:
    InvalidFunctionName: _Bad
  location:
    row: 8
    column: 0
  end_location:
    row: 9
    column: 4
  fix: ~
- kind:
    InvalidFunctionName: BAD
  location:
    row: 12
    column: 0
  end_location:
    row: 13
    column: 4
  fix: ~
- kind:
    InvalidFunctionName: BAD_FUNC
  location:
    row: 16
    column: 0
  end_location:
    row: 17
    column: 4
  fix: ~
- kind:
    InvalidFunctionName: testTest
  location:
    row: 40
    column: 4
  end_location:
    row: 41
    column: 11
  fix: ~

