src/snapshots/ruff__linter__tests__N802_N802.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  import unittest
  
  
| def Bad():
|     pass
|> Function name `Bad` should be lowercase
  
  
| def _Bad():
|     pass
|> Function name `_Bad` should be lowercase
  
  
| def BAD():
|     pass
|> Function name `BAD` should be lowercase
  
  
| def BAD_FUNC():
|     pass
|> Function name `BAD_FUNC` should be lowercase
  
  
  def good():
      pass
  
  
  def _good():
      pass
  
  
  def good_func():
      pass
  
  
  def tearDownModule():
      pass
  
  
  class Test(unittest.TestCase):
      def tearDown(self):
          return super().tearDown()
  
|     def testTest(self):
|         assert True
|> Function name `testTest` should be lowercase

