src/snapshots/ruff__linter__tests__N803_N803.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    InvalidFunctionName: A
  location:
    row: 1
    column: 13
  end_location:
    row: 1
    column: 14
  fix: ~
- kind:
    InvalidFunctionName: A
  location:
    row: 7
    column: 25
  end_location:
    row: 7
    column: 26
  fix: ~

