src/snapshots/ruff__linter__tests__N804_N804.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: InvalidFirstArgumentNameForClassMethod
  location:
    row: 3
    column: 26
  end_location:
    row: 3
    column: 30
  fix: ~

